tests/test-files/parse-the.txt
================================================================================
100 Malformed the expression
================================================================================

(package test-package)

(define x (the))

--------------------------------------------------------------------------------

error: Malformed the expression
  --> test:3:14
   |
 3 |  (define x (the))
   |                ^ expected type

================================================================================
101 Malformed the expression
================================================================================

(package test-package)

(define x (the (T -> T)))

--------------------------------------------------------------------------------

error: Malformed the expression
  --> test:3:23
   |
 3 |  (define x (the (T -> T)))
   |                         ^ expected value

================================================================================
102 Malformed the expression
================================================================================

(package test-package)

(define x (the (T -> T) y z))

--------------------------------------------------------------------------------

error: Malformed the expression
  --> test:3:26
   |
 3 |  (define x (the (T -> T) y z))
   |                            ^ unexpected trailing form
